# R-SRP

./: .gitignore  ARCHITECTURE_RSRP_ULTRA_PLUS.md  CHANGELOG.md  Cargo.toml  Dockerfile.real-crypto  LICENSE  R-SRP_Hard_Audit_Report.docx  R-SRP_Security_Audit_2026-02-27 (1).docx  README.md  README_RSRP_ULTRA.md  SECURITY.md  SPEC_IDENTITY_LAYER.md  SPEC_IMMUTABLE_LOGGING.md  audit_cspn_document.xml  audit_cspn_text.txt  audit_hard_document.xml  audit_hard_text.txt  audit_post_v1_0_0_document.xml  audit_post_v1_0_0_text.txt  audit_security_document.xml  audit_security_text.txt  deny.toml  et --hard commit_hash  flake.nix
.cargo/: config.toml
.cosign/: config.json
.github/workflows/: defense-ci.yml  formal-verification.yml  fuzz-evidence.yml  production-gate.yml  reproducible-build.yml  sbom.yml  signing.yml
.slsa/: provenance.yml
audit_post_v1_0_0_unzip/docProps/: core.xml
audit_post_v1_0_0_unzip/word/: document.xml  footer1.xml  header1.xml  styles.xml
charts/rsrp-api/: Chart.yaml  values.yaml
crates/crue-dsl/: Cargo.toml  README.md
crates/crue-dsl/src/: ast.rs  compiler.rs  error.rs  lib.rs  parser.rs  signature.rs
crates/crue-engine/: Cargo.toml  README.md
crates/crue-engine/src/: context.rs  decision.rs  engine.rs  error.rs  ir.rs  lib.rs  proof.rs  rules.rs  vm.rs
crates/crypto-core/: Cargo.toml  README.md
crates/crypto-core/src/: entropy.rs  error.rs  hash.rs  hsm.rs  lib.rs  merkle.rs  signature.rs
crates/immutable-logging/: Cargo.toml  README.md
crates/immutable-logging/src/: chain.rs  error.rs  lib.rs  log_entry.rs  merkle_service.rs  publication.rs
crates/pqcrypto/: Cargo.toml  README.md
crates/pqcrypto/src/: error.rs  hybrid.rs  kem.rs  lib.rs  signature.rs
docs/: ARCHITECTURE_RNBC_ZeroTrust.md  ASSUMPTIONS_REGISTER.md  ATTACK_SCENARIOS.md  AUDIT_REPORT_RSRP.md  CERTIFICATION_BUNDLE.md  CERTIFICATION_ROADMAP.md  COMPLIANCE.md  CRYPTO_ARCHITECTURE.md  DEPENDENCY_RISK_ASSESSMENT.md  DEPLOYMENT_PLAN_3PHASES.md  ENTROPY_BOUNDARY.md  EXECUTIVE_BRIEF.md  GOVERNANCE.md  HSM_IMPLEMENTATION_STATUS.md  INCIDENT_RESPONSE_PLAN.md  KEY_LIFECYCLE_POLICY.md  MERKLE_SECURITY_MODEL.md  NETWORK_IDENTITY_STATUS.md  OPEN_CORE_MODEL.md  OQS_REAL_CRYPTO_WINDOWS_SETUP.md  PACKAGE_ARCHITECTURE.md  PRE_AUDIT_AUTOMATIQUE_2026-02-27.md  PRODUCT_POSITIONING_RSRP.md  PROOF_ENVELOPE_V1_INTEROP.md  PROOF_ENVELOPE_V1_SPEC.md  PROOF_ENVELOPE_V1_TEST_VECTORS.json  PUBLIC_API_BOUNDARIES.md  README.md  README_ALL.md  README_ASPNetCore.md  README_IMMUTABLE_LEDGER.md  README_MVP.md  README_PROOF_ENGINE.md  README_SECURITY_CORE.md  README_SOFT_LAUNCH.md  RELEASE_NOTES_v0.9.1.md  RELEASE_NOTES_v1.1.0-hardened.md  RISK_REGISTER.md  ROADMAP_HARDENING.md  RSRP_AUDIT_SECURITE_V091_STATUT_CORRECTIFS_WORKSPACE.md  (+16 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: dsl_parser.rs  log_entry_deserialize.rs  proof_envelope_decode.rs
kubernetes/: cilium-policies.yaml  falco-config.yaml  kyverno-policies.yaml
release-artifacts/v1.1.0-hardened/: checksums.txt  sbom_crates_crue-dsl.cdx.json  sbom_crates_crue-engine.cdx.json  sbom_crates_crypto-core.cdx.json  sbom_crates_immutable-logging.cdx.json  sbom_crates_pqcrypto.cdx.json  sbom_rsrp-demo.cdx.json  sbom_services_api-service.cdx.json
rsrp-demo/: Cargo.toml
rsrp-demo/src/: main.rs
scripts/: check-oqs-env.ps1  publish.ps1  run_fuzz_evidence.sh
scripts/interop/: README.md  verify_proof_envelope_v1_vectors.go  verify_proof_envelope_v1_vectors.py  verify_proof_envelope_v1_vectors.ts
services/api-service/: Cargo.toml  Dockerfile  README.md
services/api-service/src/: auth.rs  error.rs  handlers.rs  incident.rs  main.rs  middleware.rs  mission_schedule.rs  models.rs  tls.rs
terraform/: main.tf
terraform/multi-cloud/: main.tf
