# RSRP - Proof Infrastructure for Critical Systems
# Publisher: Rsrp Systems
# Author: Aymeric Le Cloitre-Maternat (ALM)

[workspace]
resolver = "2"
members = [
    "crates/crue-engine",
    "crates/crue-dsl",
    "crates/crypto-core",
    "crates/immutable-logging",
    "crates/pqcrypto",
    "rsrp-demo",
    "services/api-service",
]

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "EUPL-1.2"
authors = ["Aymeric Le Cloitre-Maternat (ALM) <aymeric@rsrp.io>", "Rsrp Systems"]
description = "Tamper-evident deterministic decision engine for critical systems"
repository = "https://github.com/rsrp/rsrp"
homepage = "https://rsrp.io"
keywords = ["security", "audit", "zero-trust", "cryptography", "immutable"]
categories = ["cryptography", "security"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rsa = { version = "0.9", features = ["sha2"] }
signature = "2.2"
digest = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Async utilities
async-trait = "0.1"

# JWT
jsonwebtoken = "9.2"

[profile.release]
opt-level = 3
lto = "fat"  # Link Time Optimization for better security
codegen-units = 1
panic = "abort"
strip = true

# Security hardening flags
# PIE (Position Independent Executable) - enabled by default on modern linkers
# RELRO (Relocation Read-Only) - partial by default, full with "full"

[profile.dev]
opt-level = 0
debug = true
