[package]
name = "rsrp-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rsrp-policy-dsl = { path = "../crates/crue-dsl" }
rsrp-proof-engine = { path = "../crates/crue-engine", features = ["pq-proof"] }
rsrp-pqcrypto = { path = "../crates/pqcrypto" }
rsrp-immutable-ledger = { path = "../crates/immutable-logging" }
crypto-core = { package = "rsrp-security-core", path = "../crates/crypto-core" }
