# RSRP Proof Engine - Deterministic Decision Engine
# Part of Rsrp.ProofEngine crate
#
# A lightweight, tamper-evident decision engine for critical systems.

[package]
name = "rsrp-proof-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic proof engine for high-integrity Rust applications"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/rsrp-proof-engine"

[lib]
name = "crue_engine"

[package.metadata.aliases]
# Future: rsrp-proof-engine = "crue-engine"

[features]
default = ["std"]
std = []
# Enable deterministic timing (for compliance)
deterministic = []

[dependencies]
crue-dsl = { package = "rsrp-policy-dsl", version = "0.9.1", path = "../crue-dsl" }
crypto-core = { package = "rsrp-security-core", version = "0.9.1", path = "../crypto-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = ["sync", "rt"] }

[dev-dependencies]
tempfile = "3.8"
