# Crypto Core - Cryptographic Primitives for R-SRP

[package]
name = "crypto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rsa = { version = "0.9", features = ["sha2", "serde"] }
signature = "2.2"
digest = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
