# R-SRP API Service - Zero-Trust API Gateway

[package]
name = "api-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Internal Axum-based API service for RSRP (not published on crates.io)"
publish = false
readme = "README.md"

[features]
default = []
tsa-cms-openssl = ["immutable-logging/tsa-cms-openssl"]

[dependencies]
crue-engine = { package = "rsrp-proof-engine", version = "0.9.6", path = "../../crates/crue-engine" }
immutable-logging = { package = "rsrp-immutable-ledger", version = "0.9.6", path = "../../crates/immutable-logging" }
crypto-core = { package = "rsrp-security-core", version = "0.9.6", path = "../../crates/crypto-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["util", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
thiserror = "1.0"
anyhow = "1.0"
# mTLS support
rustls = "0.23"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tempfile = "3.8"
